# semantic-entropy-probe-comparison

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Dockerfile  PLAN.md  Procfile  README.md  Railway.md  nixpacks.toml  probe_training_auto.py  pyproject.toml  railpack.json  requirements.txt
artifacts/: math_hidden_states.npz
artifacts/analysis/: analysis.parquet
artifacts/models/: accuracy_probe.pkl  entropy_baseline.pkl  probe_eval.json  se_probe.pkl  se_threshold.json
artifacts/probe_datasets/: math_test.npz  math_train.npz  math_val.npz
artifacts_clean/models/: probe_eval.json
data/: math_raw.jsonl  math_runs.jsonl  math_semantic_entropy.jsonl
notebooks/: probe_analysis.py
scripts/: 01_generate_with_vllm.py  02_compute_semantic_entropy.py  02b_clean_runs_and_semantic_entropy.py  03_trace_with_nnsight.py  04_build_probe_datasets.py  04b_build_probe_datasets_clean.py  05_train_probes.py  06_eval_probes.py  07_build_analysis_dataset.py  serve_probe_analysis.sh
sep_marimo/: __init__.py  config.py  utils.py
sep_marimo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_utils.py
